fix: remove capitalize do collapse

--- a/src/components/Collapse/Collapse.scss
+++ b/src/components/Collapse/Collapse.scss
@@ -7,7 +7,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    text-transform: capitalize;
     border-bottom: 1px solid var(--color-cloud-normal);
 }
 
